 * Fix #3840: Why strip the leading spaces from Description? (applied to all multi-line fields in issue + issue notes).
 * Fix #3851: Ability to change the view status for a group of bugs
 * Fix #3852: OK button in View Issues page is not localised
 * Fix #3853: Filters sometime generate an invalid query (partial fix).
 * Fix #3866: URLs that include bookmark are not hyperlinked correctly.
 * Fix #3879: Empty entry in project select field can cause bugs to be moved to non-existing project.
 * Fix #3886: Custom HTML page title not displayed.
 * New Config: set_view_status_threshold (default REPORTER) - threshold needed to set the view status while reporting a bug / bugnote.
 * New Config: change_view_status_threshold (default UPDATER) - threshold needed to update the view status while updating a bug / bugnote.
 * New Config: view_handler_threshold (default VIEWER) - threshold needed to view the bug handler (now works for emails only).
 * New Config: view_history_threshold (default VIEWER) - threshold needed to view the bug history (now works for emails only).
 * New Config: view_attachments_threshold (default VIEWER).  Access level needed to view bugs attachments.  View means to see the file names sizes, and timestamps of the attachments.
 * New Config: download_attachments_threshold (default VIEWER).  Access level needed to download bug attachments.
 * New Config: delete_attachments_threshold (default DEVELOPER).  Access level needed to delete bug attachments.
 * New Config: allow_view_own_attachments (default ON).  Allow users to view attachments uploaded by themselves even if their access level is below view_attachments_threshold.
 * New Config: allow_download_own_attachments (default ON).  Allow users to download attachments uploaded by themselves even if their access level is below download_attachments_threshold.